--- a/tweet-ui/src/main/res/values-ca/plurals.xml
+++ b/tweet-ui/src/main/res/values-ca/plurals.xml
@@ -18,9 +18,16 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="tw__allow_btn_txt">Dopusti</string>
-    <string name="tw__login_btn_txt">Prijavite se putem Twittera</string>
-    <string name="tw__not_now_btn_txt">Ne sada</string>
-    <string name="tw__share_email_desc">Servisu %1$s dopustite pristup adresi e-pošte povezanoj s vašim računom za Twitter \@%2$s da bi je %1$s mogao koristiti u skladu sa svojim pravilima o privatnosti. %1$s bi vam na tu adresu, primjerice, mogao slati novosti i ostale obavijesti.</string>
-    <string name="tw__share_email_title">Dijelite svoju adresu e-pošte</string>
+    <plurals name="tw__time_hours">
+        <item quantity="one">1 h</item>
+        <item quantity="other">%d h</item>
+    </plurals>
+    <plurals name="tw__time_mins">
+        <item quantity="one">1 m</item>
+        <item quantity="other">%d m</item>
+    </plurals>
+    <plurals name="tw__time_secs">
+        <item quantity="one">1 s</item>
+        <item quantity="other">%d s</item>
+    </plurals>
 </resources>
