Add alt text to Tweet views
Jira-Id: TFW-6613
Change-Id: Ic0afb6c63bbbbcafc9239b0a941a9a0d1d359f09

--- a/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
@@ -77,7 +77,7 @@
         <com.twitter.sdk.android.tweetui.internal.TweetMediaView
             android:id="@+id/tw__tweet_media"
             style="@style/tw__TweetMedia"
-            tools:ignore="ContentDescription" />
+            android:contentDescription="@string/tw__tweet_media"/>
 
         <com.twitter.sdk.android.tweetui.internal.MediaBadgeView
             android:id="@+id/tw__tweet_media_badge"
