--- a/tweet-ui/src/main/res/values/attrs.xml
+++ b/tweet-ui/src/main/res/values/attrs.xml
@@ -32,4 +32,12 @@
         <attr name="contentDescriptionOff" format="string"/>
         <attr name="toggleOnClick" format="boolean"/>
     </declare-styleable>
+
+    <declare-styleable name="AspectRatioFrameLayout">
+        <attr name="tw__frame_layout_aspect_ratio" format="float"/>
+        <attr name="tw__frame_layout_dimension_to_adjust" format="enum">
+            <enum name="height" value="0"/>
+            <enum name="width" value="1"/>
+        </attr>
+    </declare-styleable>
 </resources>
