--- a/tweet-ui/src/main/res/values/tw__tweet_media_styles.xml
+++ b/tweet-ui/src/main/res/values/tw__tweet_media_styles.xml
@@ -45,18 +45,30 @@
         <item name="android:focusable">false</item>
     </style>
 
-    <style name="tw__TweetMedia">
+    <style name="tw__TweetImage">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:focusable">false</item>
-        <item name="tw__image_aspect_ratio">@dimen/tw__tweet_media_aspect_ratio</item>
-        <item name="tw__image_dimension_to_adjust">height</item>
     </style>
 
     <style name="tw__TweetMediaContainer">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="tw__TweetMediaContainer.Compact">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/tw__compact_tweet_media_margin_top</item>
+        <item name="android:layout_marginBottom">@dimen/tw__compact_tweet_media_margin_bottom</item>
+        <item name="android:layout_marginRight">@dimen/tw__compact_tweet_media_margin_right</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="tw__TweetMedia">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="tw__Badge">
@@ -100,14 +112,6 @@
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_logo_margin_top</item>
         <item name="android:layout_marginRight">@dimen/tw__compact_tweet_logo_margin_right</item>
         <item name="android:src">@drawable/tw__ic_logo_blue</item>
-    </style>
-
-    <style name="tw__TweetMediaContainer.Compact">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">@dimen/tw__compact_tweet_media_margin_top</item>
-        <item name="android:layout_marginBottom">@dimen/tw__compact_tweet_media_margin_bottom</item>
-        <item name="android:layout_marginRight">@dimen/tw__compact_tweet_media_margin_right</item>
     </style>
 
 </resources>
