Add multi-photo support to GalleryActivity
Change-Id: Ia9baa9e28791ef26f974437a46e6d2aa0c37132e

--- a/tweet-ui/src/main/res/values/dimens.xml
+++ b/tweet-ui/src/main/res/values/dimens.xml
@@ -115,4 +115,6 @@
     <dimen name="tw__video_control_height">32dp</dimen>
     <dimen name="tw__video_control_text_size">13sp</dimen>
 
+    <!-- Gallery sizes -->
+    <dimen name="tw__gallery_page_margin">12dp</dimen>
 </resources>
