--- a/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
@@ -91,12 +91,19 @@
         android:layout_toEndOf="@id/tw__tweet_author_avatar"
         tools:text="just setting up my twttr"/>
 
+    <FrameLayout
+        android:id="@+id/quote_tweet_holder"
+        style="@style/tw__QuoteTweetContainer.Compact"
+        android:layout_below="@id/tw__tweet_text"
+        android:layout_toEndOf="@id/tw__tweet_author_avatar"
+        android:layout_toRightOf="@id/tw__tweet_author_avatar" />
+
     <include
         style="@style/tw__TweetActionButtonBar.Compact"
         layout="@layout/tw__action_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tw__tweet_text"
+        android:layout_below="@id/quote_tweet_holder"
         android:layout_toEndOf="@id/tw__tweet_author_avatar"
         android:layout_toRightOf="@id/tw__tweet_author_avatar"/>
 
@@ -104,6 +111,6 @@
         android:id="@+id/bottom_separator"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tw__compact_tweet_container_bottom_separator"
-        android:layout_below="@id/tw__tweet_text"/>
+        android:layout_below="@id/quote_tweet_holder"/>
 
 </merge>
