--- a/tweet-ui/src/main/res/values/tw__tweet_media_styles.xml
+++ b/tweet-ui/src/main/res/values/tw__tweet_media_styles.xml
@@ -16,22 +16,26 @@
   -->
 
 <resources
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="tw__TweetAvatar">
+    <style name="tw__TweetAvatar" tools:ignore="NewApi">
         <item name="android:layout_width">@dimen/tw__tweet_avatar_size</item>
         <item name="android:layout_height">@dimen/tw__tweet_avatar_size</item>
         <item name="android:layout_marginTop">@dimen/tw__tweet_avatar_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/tw__tweet_avatar_margin_left</item>
+        <item name="android:layout_marginStart">@dimen/tw__tweet_avatar_margin_left</item>
         <item name="android:layout_marginRight">@dimen/tw__tweet_avatar_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__tweet_avatar_margin_right</item>
         <item name="android:focusable">false</item>
     </style>
 
-    <style name="tw__TwitterLogo">
+    <style name="tw__TwitterLogo" tools:ignore="NewApi">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/tw__tweet_logo_margin_top</item>
         <item name="android:layout_marginRight">@dimen/tw__tweet_logo_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__tweet_logo_margin_right</item>
         <item name="android:src">@drawable/tw__ic_logo_blue</item>
         <item name="android:focusable">false</item>
     </style>
@@ -42,10 +46,11 @@
         <item name="android:visibility">gone</item>
     </style>
 
-    <style name="tw__TweetMediaContainer.Compact">
+    <style name="tw__TweetMediaContainer.Compact" tools:ignore="NewApi">
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_media_margin_top</item>
         <item name="android:layout_marginBottom">@dimen/tw__compact_tweet_media_margin_bottom</item>
         <item name="android:layout_marginRight">@dimen/tw__compact_tweet_media_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__compact_tweet_media_margin_right</item>
     </style>
 
     <style name="tw__TweetMediaContainer.Quote">
@@ -54,18 +59,21 @@
         <item name="android:layout_marginLeft">@dimen/tw__quote_tweet_media_margin_horizontal</item>
     </style>
 
-    <style name="tw__QuoteTweetContainer">
+    <style name="tw__QuoteTweetContainer" tools:ignore="NewApi">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:visibility">gone</item>
-        <item name="android:layout_marginRight">@dimen/tw__tweet_quote_tweet_margin_horizontal</item>
         <item name="android:layout_marginLeft">@dimen/tw__tweet_quote_tweet_margin_horizontal</item>
+        <item name="android:layout_marginRight">@dimen/tw__tweet_quote_tweet_margin_horizontal</item>
         <item name="android:layout_marginTop">@dimen/tw__tweet_quote_tweet_margin_top</item>
     </style>
 
-    <style name="tw__QuoteTweetContainer.Compact">
-        <item name="android:layout_marginRight">@dimen/tw__compact_tweet_quote_tweet_margin_right</item>
+    <style name="tw__QuoteTweetContainer.Compact"
+        tools:ignore="NewApi">
         <item name="android:layout_marginLeft">@dimen/tw__compact_tweet_quote_tweet_margin_left</item>
+        <item name="android:layout_marginStart">@dimen/tw__compact_tweet_quote_tweet_margin_left</item>
+        <item name="android:layout_marginRight">@dimen/tw__compact_tweet_quote_tweet_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__compact_tweet_quote_tweet_margin_right</item>
     </style>
 
     <style name="tw__TweetMedia">
@@ -89,30 +97,34 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="tw__TweetBadge">
+    <style name="tw__TweetBadge" tools:ignore="NewApi">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">@dimen/tw__tweet_media_badge_margin</item>
-        <item name="android:layout_marginBottom">@dimen/tw__tweet_media_badge_margin</item>
+        <item name="android:layout_margin">@dimen/tw__tweet_media_badge_margin</item>
         <item name="android:layout_gravity">bottom|left</item>
     </style>
 
     <!--Compact Styles-->
 
-    <style name="tw__TweetAvatar.Compact" parent="tw__TweetAvatar">
+    <style name="tw__TweetAvatar.Compact" parent="tw__TweetAvatar"
+        tools:ignore="NewApi">
         <item name="android:layout_width">@dimen/tw__tweet_avatar_size</item>
         <item name="android:layout_height">@dimen/tw__tweet_avatar_size</item>
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_avatar_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/tw__compact_tweet_avatar_margin_left</item>
+        <item name="android:layout_marginStart">@dimen/tw__compact_tweet_avatar_margin_left</item>
         <item name="android:layout_marginRight">@dimen/tw__compact_tweet_avatar_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__compact_tweet_avatar_margin_right</item>
         <item name="android:focusable">false</item>
     </style>
 
-    <style name="tw__TwitterLogo.Compact">
+    <style name="tw__TwitterLogo.Compact"
+        tools:ignore="NewApi">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_logo_margin_top</item>
         <item name="android:layout_marginRight">@dimen/tw__compact_tweet_logo_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__compact_tweet_logo_margin_right</item>
         <item name="android:src">@drawable/tw__ic_logo_blue</item>
     </style>
 
