--- a/tweet-ui/src/main/res/values/tw__tweet_text_styles.xml
+++ b/tweet-ui/src/main/res/values/tw__tweet_text_styles.xml
@@ -24,8 +24,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/tw__tweet_retweeted_by_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/tw__tweet_retweeted_by_margin_left</item>
+        <item name="android:layout_marginStart">@dimen/tw__tweet_retweeted_by_margin_left</item>
         <item name="android:layout_marginBottom">@dimen/tw__tweet_retweeted_by_margin_bottom</item>
         <item name="android:drawableLeft">@drawable/tw__ic_retweet_light</item>
+        <item name="android:drawableStart">@drawable/tw__ic_retweet_light</item>
         <item name="android:drawablePadding">@dimen/tw__tweet_retweeted_by_drawable_padding</item>
         <item name="android:textSize">@dimen/tw__text_size_medium</item>
         <item name="android:fontFamily">sans-serif</item>
@@ -47,6 +49,7 @@
     <style name="tw__TweetFullNameBase" parent="tw__AttributionText" tools:ignore="NewApi">
         <item name="android:layout_marginTop">@dimen/tw__tweet_full_name_margin_top</item>
         <item name="android:layout_marginRight">@dimen/tw__tweet_full_name_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__tweet_full_name_margin_right</item>
         <item name="android:textSize">@dimen/tw__text_size_large</item>
         <item name="android:textColor">@color/tw__tweet_light_primary_text_color</item>
         <item name="android:drawablePadding">@dimen/tw__tweet_full_name_drawable_padding</item>
@@ -83,7 +86,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/tw__tweet_text_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/tw__tweet_text_margin_left</item>
+        <item name="android:layout_marginStart">@dimen/tw__tweet_text_margin_left</item>
         <item name="android:layout_marginRight">@dimen/tw__tweet_text_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__tweet_text_margin_right</item>
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textSize">@dimen/tw__text_size_large</item>
         <item name="android:lineSpacingExtra">2dp</item>
@@ -95,8 +100,10 @@
 
     <!--Compact Styles-->
 
-    <style name="tw__TweetRetweetedBy.Compact">
+    <style name="tw__TweetRetweetedBy.Compact"
+        tools:ignore="NewApi">
         <item name="android:layout_marginLeft">@dimen/tw__compact_tweet_retweeted_by_margin_left</item>
+        <item name="android:layout_marginStart">@dimen/tw__compact_tweet_retweeted_by_margin_left</item>
         <item name="android:layout_marginBottom">@dimen/tw__compact_tweet_retweeted_by_margin_bottom</item>
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_retweeted_by_margin_top</item>
         <item name="android:drawablePadding">@dimen/tw__compact_tweet_retweeted_by_drawable_padding</item>
@@ -107,12 +114,15 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginRight">@dimen/tw__compact_tweet_attribution_line_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__compact_tweet_attribution_line_margin_right</item>
         <item name="android:importantForAccessibility">noHideDescendants</item>
     </style>
 
-    <style name="tw__TweetFullName.Compact">
+    <style name="tw__TweetFullName.Compact"
+        tools:ignore="NewApi">
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_full_name_margin_top</item>
         <item name="android:layout_marginRight">@dimen/tw__compact_tweet_full_name_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__compact_tweet_full_name_margin_right</item>
         <item name="android:ellipsize">none</item>
     </style>
 
@@ -124,6 +134,7 @@
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_screen_name_margin_top</item>
         <item name="android:layout_marginBottom">@dimen/tw__compact_tweet_screen_name_margin_bottom</item>
         <item name="android:paddingLeft">@dimen/tw__compact_tweet_screen_name_padding_left</item>
+        <item name="android:paddingStart">@dimen/tw__compact_tweet_screen_name_padding_left</item>
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textSize">@dimen/tw__text_size_medium</item>
         <item name="android:ellipsize">end</item>
@@ -141,7 +152,9 @@
         tools:ignore="NewApi">
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_text_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/tw__compact_tweet_text_margin_left</item>
+        <item name="android:layout_marginStart">@dimen/tw__compact_tweet_text_margin_left</item>
         <item name="android:layout_marginRight">@dimen/tw__compact_tweet_text_margin_right</item>
+        <item name="android:layout_marginEnd">@dimen/tw__compact_tweet_text_margin_right</item>
     </style>
 
     <!-- Quote Tweet Styles -->
@@ -152,13 +165,17 @@
         <item name="android:importantForAccessibility">noHideDescendants</item>
         <item name="android:layout_marginTop">@dimen/tw__quote_tweet_attribution_text_margin_top</item>
         <item name="android:layout_marginLeft">@dimen/tw__quote_tweet_attribution_text_margin_horizontal</item>
-        <item name="android:layout_marginRight"> @dimen/tw__quote_tweet_attribution_text_margin_horizontal</item>
+        <item name="android:layout_marginStart">@dimen/tw__quote_tweet_attribution_text_margin_horizontal</item>
+        <item name="android:layout_marginRight">@dimen/tw__quote_tweet_attribution_text_margin_horizontal</item>
+        <item name="android:layout_marginEnd">@dimen/tw__quote_tweet_attribution_text_margin_horizontal</item>
     </style>
 
     <style name="tw__TweetText.Quote" tools:ignore="NewApi">
         <item name="android:layout_marginTop">@dimen/tw__compact_tweet_text_margin_top</item>
         <item name="android:layout_marginBottom">@dimen/tw__quote_tweet_text_margin_bottom</item>
         <item name="android:layout_marginLeft">@dimen/tw__quote_tweet_text_margin_horizontal</item>
-        <item name="android:layout_marginRight"> @dimen/tw__quote_tweet_text_margin_horizontal</item>
+        <item name="android:layout_marginStart">@dimen/tw__quote_tweet_text_margin_horizontal</item>
+        <item name="android:layout_marginRight">@dimen/tw__quote_tweet_text_margin_horizontal</item>
+        <item name="android:layout_marginEnd">@dimen/tw__quote_tweet_text_margin_horizontal</item>
     </style>
 </resources>
