Add test Activity for RTL languages
Change-Id: Ic8ab231dbea062d44daa1851a79e2d644b9d1257

--- a/samples/app/src/main/res/layout/tweetui_activity_main.xml
+++ b/samples/app/src/main/res/layout/tweetui_activity_main.xml
@@ -69,6 +69,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tweet_pojo" />
 
+            <Button
+                android:id="@+id/button_rtl_timeline_activity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rtl_timeline" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
