Remove cards from TwitterKit Composer
- Removed Card object from public interface
- Removed ability to set card in ComposerActivity builder
- Added ability to specify image to be attached to Tweet

Jira-Id: PUBPL-770
Change-Id: I27587bf761851b5f4aad5cb2d9f2d08edb92f497

--- a/tweet-composer/src/main/res/layout/tw__composer_view.xml
+++ b/tweet-composer/src/main/res/layout/tw__composer_view.xml
@@ -71,12 +71,14 @@
                 android:id="@+id/tw__edit_tweet"
                 style="@style/tw__EditTweet"/>
 
-            <FrameLayout
-                android:id="@+id/tw__card_view"
-                android:visibility="gone"
+            <ImageView
+                android:id="@+id/tw__image_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/tw__card_spacing_large"/>
+                android:layout_margin="@dimen/tw__composer_spacing_large"
+                android:adjustViewBounds="true"
+                android:visibility="gone"
+                tools:ignore="ContentDescription"/>
         </LinearLayout>
     </com.twitter.sdk.android.tweetcomposer.internal.util.ObservableScrollView>
 
