--- a/tweet-ui/src/main/res/layout/tw__gallery_activity.xml
+++ b/tweet-ui/src/main/res/layout/tw__gallery_activity.xml
@@ -19,7 +19,7 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <com.twitter.sdk.android.tweetui.internal.ViewPagerFixed
         android:id="@+id/tw__view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
