--- a/tweet-ui/src/main/res/values/colors.xml
+++ b/tweet-ui/src/main/res/values/colors.xml
@@ -32,4 +32,6 @@
 
     <color name="tw__cta_border_color">@android:color/white</color>
     <color name="tw__cta_text_color">@android:color/white</color>
+
+    <color name="tw__black_opacity_10">#1a000000</color>
 </resources>
