Update Twitter Kit build
Change-Id: Ib425ff05a0aa7839be87ab36da6f39e0577ef1a6

--- a/tweet-composer/src/main/res/values/themes.xml
+++ b/tweet-composer/src/main/res/values/themes.xml
@@ -16,13 +16,17 @@
   -->
 
 <resources>
-    <style name="ComposerLight" parent="@android:style/Theme.Light" >
+    <style name="ComposerLight" parent="@android:style/Theme.Holo.Light" >
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="android:textColor">@color/tw__composer_black</item>
         <item name="android:textColorSecondary">@color/tw__composer_deep_gray</item>
         <item name="android:textColorHint">@color/tw__composer_light_gray</item>
         <item name="tw__twitter_logo">@drawable/tw__composer_logo_blue</item>
     </style>
-    <style name="ComposerDark" parent="@android:style/Theme" >
+    <style name="ComposerDark" parent="@android:style/Theme.Holo" >
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="android:textColor">@color/tw__composer_white</item>
         <item name="android:textColorSecondary">@color/tw__composer_deep_gray</item>
         <item name="android:textColorHint">@color/tw__composer_light_gray</item>
