--- a/tweet-ui/src/main/res/values/themes.xml
+++ b/tweet-ui/src/main/res/values/themes.xml
@@ -16,7 +16,9 @@
   -->
 
 <resources>
-    <style name="MediaTheme" parent="@android:style/Theme" >
+    <style name="MediaTheme" parent="@android:style/Theme.Holo">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/black</item>
     </style>
 </resources>
